# VoiceAI

./: .gitignore  Makefile  gunicorn.conf.py  install.py  manage.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  tailwind.config.js  utils.py
StyleTTS2/: meldataset.py  models.py  msinference.py  text_utils.py  utils.py
StyleTTS2/Configs/: config.yml  config_ft.yml  config_libritts.yml
StyleTTS2/Utils/PLBERT/: util.py
app/: decorators.py  env.py  environ.py  urls.py  utils.py  wsgi.py
app/settings/: base.py  dev.py  production.py
app/static/js/: index.js
app/static/src/: input.css  tailwind.css
app/templates/: 404.html  500.html  base.html
app/templates/pages/: login.html
core/: urls.py  views.py
core/templates/pages/: home.html
hubert/: customtokenizer.py  hubert_manager.py
scripts/: activate
transcription/: urls.py  views.py
transcription/templates/pages/: transcription.html
tts/: urls.py  views.py
tts/templates/pages/: tts.html
tts/templates/tts/: base.html  index.html  voice_clone.html
voice_cloning/: urls.py  views.py
voice_cloning/templates/pages/: voice-cloning.html
